Update: GPU docs link updated, community page font on dark mode fixed (#170)
* Refactored code to update the page title and banner link. Applied light color to the header and paragraph description( 3 groups ) for improved visibility on mobile screens in dark mode.

* Style: Applied light color to the header text and paragraph description( 3 groups ) for improved visibility on larger  screens in dark mode.

Style:  added hovers to Buttons in GPU-Testnet Page and refactored some of the css ro make it readable.

* 1. Reduced width of the main titles to prevent text overlaps.

2.Updated the top-level red link banner to open a new tab when the user clicks.

* Style: refactored the css file to make it organize and readable.

* GPU-Testnet Page Update: Date updated from "June 12, 2023 - Ends: July 3rd, 2023" to "June 20th, 2023 - Ends: July 11th, 2023 "
1. GPU docs links added successfuly,
2. kyc guideline button removed. 3. Gpu table caption and horizontal line  removed.
4.Updated the introductory text to provide a clearer description of the open-source marketplace for GPU compute.

* Style: Space added  around the GPU Models (top, left, bottom).

* 1. Fixed font issue on the community page for dark mode
2. Updated GPU docs link

* Styles: Refactored the css in dark mode to make it readable

---------

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -47,12 +47,19 @@ $navbar-dark-active-color: $link-color-dark;
   color: $link-color-dark;
 }
 
+[data-dark-mode] body table {
+  color: #f0f0f0;
+}
+
 [data-dark-mode] body .btn-outline-primary:hover {
   color: $body-bg-dark;
 }
 
 [data-dark-mode] body .no-border {
   color: #f0f0f0;
+}
+[data-dark-mode] body .community__text {
+  color: #f0f0f0 !important;
 }
 
 [data-dark-mode] body .s_d-btns {
@@ -67,11 +74,9 @@ $navbar-dark-active-color: $link-color-dark;
   color: #f0f0f0;
 }
 
-[data-dark-mode] body .table__border{
+[data-dark-mode] body .table__border {
   border: 1px solid #f0f0f0;
-
 }
-
 
 [data-dark-mode] body .dates_text {
   color: #f0f0f0 !important;
